workaround table.invisible visibility issue

--- a/wcc/theme/static/css/main.css
+++ b/wcc/theme/static/css/main.css
@@ -385,7 +385,7 @@ h2.portlet-header{
  */
 
 table.invisible {
-    display:block;
+    visibility:visible;
 }
 
 textarea {
